updating week03 project
