# models/User.js
@@ -2,11 +2,13 @@ const mongoose = require('mongoose')
 
 const userSchema = new mongoose.Schema(
   {
-    provider: { type: String, required: true, enum: ['google'] },
-    providerId: { type: String, required: true, unique: true },
+    // provider: { type: String, required: true, enum: ['google'] },
+    // providerId: { type: String, required: true, unique: true },
     name: { type: String, required: true },
     email: { type: String, required: true, unique: true },
     avatar: { type: String },
+    phoneNumber: { type: String },
+    dateOfBirth: { type: Date },
   },
   { timestamps: true }
 )
