# utilities/validator.js
@@ -52,4 +52,46 @@ validate.validateRules = async function (req, res, next) {
   next()
 }
 
+validate.createUserRules = function () {
+  return [
+    body('name').trim().notEmpty().withMessage('Name is required'),
+    body('email')
+      .trim()
+      .notEmpty()
+      .withMessage('Email is required')
+      .isEmail()
+      .withMessage('Incorrect email format'),
+    body('dateOfBirth')
+      .isISO8601()
+      .toDate()
+      .withMessage('Date of birth must be a valid ISO date'),
+  ]
+}
+validate.updateUserRules = function () {
+  return [
+    param('id').isMongoId().withMessage('Invalid user ID'),
+    body('name').optional().trim().notEmpty(),
+    body('email').optional().trim().notEmpty(),
+    body('avatar').optional().trim().notEmpty(),
+    body('phoneNumber').optional().trim().notEmpty(),
+    body('dateOfBirth').optional().isISO8601().toDate(),
+  ]
+}
+validate.deleteUserRules = function () {
+  return [param('id').isMongoId().withMessage('Invalid user ID')]
+}
+validate.getUserByIdRules = function () {
+  return [param('id').isMongoId().withMessage('Invalid User ID')]
+}
+validate.validateUserRules = async function (req, res, next) {
+  const errors = validationResult(req)
+  if (!errors.isEmpty()) {
+    const allErrors = errors.array().map((err) => err.msg)
+    return res.status(400).json({
+      errors: allErrors,
+    })
+  }
+  next()
+}
+
 module.exports = validate
